<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Favorite Movie</string>

    <string name="poster_content">Poster</string>
    <string name="rating_ex">5.5</string>
    <string name="genre_ex">Horror, Fiction</string>
    <string name="movie_title">Movie Title</string>
    <string name="date_ex">2019</string>
    <string name="icStar">icStar</string>
    <string name="empty_list">The list is still empty.</string>

</resources>
