<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.transformation.TransformationChildCard
            android:id="@+id/img_card"
            android:layout_width="140dp"
            android:layout_height="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/poster_content"
                android:scaleType="center"
                app:srcCompat="@mipmap/ic_launcher" />

        </com.google.android.material.transformation.TransformationChildCard>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/icStar"
            android:src="@drawable/ic_star_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_rating"
            app:layout_constraintEnd_toStartOf="@+id/movie_rating"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/img_card"
            app:layout_constraintTop_toBottomOf="@+id/movie_release_date" />

        <TextView
            android:id="@+id/movie_genre"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.7"
            android:text="@string/genre_ex"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_card" />

        <TextView
            android:id="@+id/movie_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:alpha="0.7"
            android:text="@string/date_ex"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@+id/movie_rating"
            app:layout_constraintStart_toEndOf="@+id/img_card"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/rating_ex"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>